# whippyunits

./: .gitignore  Cargo.toml  LICENSE  LSP_PROXY_SETUP.md  README.md  VSCODE_EXTENSION_IMPLEMENTATION.md  build.rs  cargo-nightly  debug_macro.rs  debug_macro_test.rs  dimension_exponents.rs  dimensional_metadata.rs  generate_dimensions.rs  generate_quantity_scale_consts.rs  generate_unit_macros  generate_unit_macros.rs  generator_utils.rs  hover_response2.json  macro_test_expected  regenerate_units.sh  test_args.rs  test_composite_debug.rs  test_const_check  test_const_check.rs  test_constraint  test_constraint.rs  test_dimension_mismatch  test_hover_processing.sh  test_isize_const  test_lsp_proxy.rs  test_macro_demo.rs  test_macro_output.rs  test_mm2.rs  test_parse_mm.rs  test_simple  test_simple.rs  test_slice  test_vscode_proxy.sh  units.rs
.cargo/: config.toml
.github/workflows/: lint.yml
default-dimensions/: Cargo.toml
default-dimensions/src/: base_units.rs  dimensions.rs  lib.rs  parsing.rs  util.rs
demo_project/: Cargo.toml
demo_project/src/: main.rs
docs/: comparison.md
examples/: README.md  basic_test.rs  custom_literals_demo.rs  declarative_test.rs  from_json_demo.rs  from_string_demo.rs  minimal_hover_test.rs  nalgebra_test.rs  ndarray_test.rs  proc_macro_usage.rs  simple_test.rs  ucum_serialization_demo.rs
examples/custom_declarators/: branded_declarators.rs  rescaling_declarators.rs
examples/erasure/: angular_erasure.rs  scalar_erasure.rs
examples/foreign_units/: affine_units.rs  nonstorage_units.rs
examples/generics/: centripetal_acceleration.rs  filter.rs  pid_controller.rs
examples/getting_started/: common_errors.rs  concepts.rs  declarators.rs  hello_world.rs  setup.rs  storage_types.rs
examples/operations/: arithmetic.rs  comparison.rs  rescaling.rs  value_access.rs
examples/serialization/: deserialization.rs  serialization.rs
examples/type_assertions/: rescale_targeting.rs  safe_mult_div.rs
generators/: Cargo.toml  dimension_data.rs  generate_quantity_type.rs  generate_unit_macros.rs  generator_utils.rs
lsp-proxy/: .gitignore  Cargo.toml  README.md  REFRESH_RESOLVE_ANALYSIS.md  REFRESH_RESOLVE_IMPLEMENTATION.md
lsp-proxy/examples/: ambiguous_demo.rs  clean_unicode_demo.rs  demo.rs  verbose_unicode_demo.rs
lsp-proxy/probative/: inlay_hint_test.rs  integration_test.rs  minimal_hover_test.rs  refresh_resolve_test.rs  semantic_tokens_format_test.rs
lsp-proxy/src/: hover_processor.rs  inlay_hint_processor.rs  inlay_hint_refresh_test.rs  integration_test.rs  lib.rs  lsp_structures.rs  main.rs  pretty_main.rs  quantity_detection.rs  rustc_pretty.rs  tests.rs  unit_formatter.rs
proc-macros/: Cargo.toml
proc-macros/examples/: test_macro.rs
proc-macros/src/: api_helpers.rs  compute_unit_dimensions_macro.rs  culit_macro.rs  default_declarators_macro.rs  define_base_units_macro.rs  define_generic_dimension.rs  define_generic_dimension_macro.rs  define_literals_macro.rs  define_local_quantity_macro.rs  define_unit_declarators_macro.rs  dimension_suggestions.rs  generate_all_dimensionless_cross_type_macro.rs  generate_all_radian_erasures_macro.rs  generate_default_declarators_macro.rs  generate_literals_module_macro.rs  generate_local_unit_literals_macro.rs  lib.rs  lift_trace.rs  local_quantity_macro.rs  local_unit_literals_macro.rs  local_unit_macro.rs  local_unit_type_macro.rs  pow_lookup_macro.rs  quantity_macro.rs  radian_erasure_macro.rs  scale_suggestions.rs  scoped_preferences_macro.rs  shared_utils.rs  test_example.rs  unit_macro.rs  unit_suggestions.rs  value_macro.rs
proc-macros/src/utils/: culit.rs  lift_trace.rs  literal_macros.rs  scale_suggestions.rs  shared_utils.rs
proc-macros/tests/: integration_test.rs
rustc-pretty/src/: lib.rs
shared-dimension-data/: Cargo.toml
shared-dimension-data/src/: lib.rs
src/: alloc.rs  api.rs  arithmetic.rs  arithmetic_quantity_types.rs  constants.rs  custom_literals.rs  declarative_unit_macro.rs  default_declarators.rs  dimension_traits.rs  generated_api.rs  generated_arithmetic_quantity_types.rs  generated_constants.rs  generated_quantity_type.rs  generated_unit_macro.rs  imperial_declarators.rs  int_conversion.rs  lib.rs  quantity.rs  quantity_type.rs  quantity_type_macros.rs  rescale_macro.rs  scale_conversion.rs  scale_resolution.rs  scoped_preferences.rs  serialization.rs  unit_macro.rs  value_macro.rs
src/api/: left_hand_wins.rs  mod.rs  smaller_wins.rs  strict.rs
src/print/: custom_display.rs  display_traits.rs  format_macro.rs  format_specifiers.rs  mod.rs  name_lookup.rs  prettyprint.rs  unit_literal_generator.rs  utils.rs
test_macro_demo/: Cargo.toml
test_macro_demo/src/: main.rs
tests/: arithmetic_tests.rs  comparison_tests.rs  compile_fail_tests.rs  custom_literals_test.rs  debug_method_name_test.rs  debug_symbols_test.rs  proc_macro_test.rs  scoped_prefs_test.rs  simple_culit_test.rs  test_format_method.rs  test_local_quantity.rs  test_shortname_literals.rs  test_value_macro.rs
tests/compile_fail/: add_length_to_time.rs  add_length_to_time.stderr  add_mass_to_length.stderr  assign_wrong_type.rs  assign_wrong_type.stderr  compare_different_dimensions.stderr  compare_different_scales.stderr
tests/compile_fail_cge/: add_length_to_time.stderr  assign_wrong_type.rs  assign_wrong_type.stderr  compare_different_dimensions.stderr  compare_different_scales.rs  compare_different_scales.stderr
tests/compile_fail_stable/: add_length_to_time.rs  add_length_to_time.stderr  assign_wrong_type.stderr  compare_different_dimensions.rs  compare_different_dimensions.stderr  compare_different_scales.stderr
tests/utils/: mod.rs
unit-macro/: Cargo.toml
vscode-extension/: .vscodeignore  build.sh  example.rs  package-lock.json  package.json  test-macro-expander.js
whippyunits-core/: Cargo.toml
whippyunits-core/src/: api_helpers.rs  dimension_exponents.rs  dimensions.rs  lib.rs  num.rs  parser.rs  prefix.rs  scale_exponents.rs  storage_unit.rs  units.rs
whippyunits-pretty/: Cargo.toml  README.md
whippyunits-pretty/src/: lib.rs  main.rs  rustc_pretty.rs
(+5 files in other folders)
