[workspace]
members = [
    ".",
    "proc-macros",
    "default-dimensions",
    "whippyunits-pretty",
]

[package]
name = "whippyunits"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
libm = "0.2"
whippyunits-proc-macros = { path = "./proc-macros" }
whippyunits-default-dimensions = { path = "./default-dimensions" }
num-traits = "0.2"
nalgebra = "0.34.0"
ndarray = "0.16.1"
culit = "0.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
trybuild = "1.0"


[features]
default = ["std", "strict"]
std = []
strict = []
smaller_wins = []
left_hand_wins = []

[lib]
name = "whippyunits"
path = "src/lib.rs"




[profile.dev]
incremental = false

[profile.release]
incremental = false 