[package]
name = "whippyunits-lsp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tempfile = "3.0"

[[bin]]
name = "lsp-proxy"
path = "src/main.rs"

[[example]]
name = "ambiguous_demo"
path = "examples/ambiguous_demo.rs"

