[package]
name = "whippyunits-lsp-proxy"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP proxy for enhanced whippyunits type display in IDEs"
keywords = ["units", "lsp", "language-server", "ide", "rust-analyzer"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tempfile = "3.0"
shellexpand = "3.0"
clap = { version = "4.0", features = ["derive"] }
whippyunits = { path = ".." }
whippyunits-core = { path = "../whippyunits-core" }
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"

[[bin]]
name = "lsp-proxy"
path = "src/main.rs"



