[package]
name = "whippyunits-proc-macros"
version = "0.2.1"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for whippyunits unit definitions and declarators"
keywords = ["units", "measurement", "dimensional", "type-safety", "proc-macro"]
categories = ["science", "no-std", "development-tools"]

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
strsim = "0.11"
syn = { version = "2.0", features = ["full"] }
whippyunits-core = { path = "../whippyunits-core", version = "0.2.1" }