[package]
name = "whippyunits-core"
version.workspace = true
edition.workspace = true

[features]
nightly = []

[[bin]]
name = "symbol_linter"
path = "src/bin/symbol_linter.rs"

[[bin]]
name = "conversion_factor_linter"
path = "src/bin/conversion_factor_linter.rs"

[lints.rust]
mixed_script_confusables = "allow"
