[package]
name = "whippyunits-core"
version.workspace = true
edition.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[features]
nightly = []

[[bin]]
name = "symbol_linter"
path = "src/bin/symbol_linter.rs"

[[bin]]
name = "conversion_factor_linter"
path = "src/bin/conversion_factor_linter.rs"

[lints.rust]
mixed_script_confusables = "allow"
