[package]
name = "whippyunits-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and utilities for whippyunits"
keywords = ["units", "measurement", "dimensional", "type-safety"]
categories = ["science", "no-std"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[features]
nightly = []

[[bin]]
name = "symbol_linter"
path = "src/bin/symbol_linter.rs"

[[bin]]
name = "conversion_factor_linter"
path = "src/bin/conversion_factor_linter.rs"

[lints.rust]
mixed_script_confusables = "allow"
