[package]
name = "whippyunits-pretty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.0"
whippyunits-lsp-proxy = { path = "../lsp-proxy" }

[[bin]]
name = "whippyunits-pretty"
path = "src/main.rs"
